"fix HEADER text on mobile display"

--- a/style.css
+++ b/style.css
@@ -150,7 +150,8 @@ section {
     }
     header h2 {
         font-size: 1rem;
-        width: 8rem
+        width: 8rem;
+        margin-left: .75rem;
     }
     header button {
         height: 2rem;
